--- a/css/resstyle.css
+++ b/css/resstyle.css
@@ -1,4 +1,4 @@
-@media(max-width:1199.5px){
+/* @media(max-width:1199.5px){
     h1{
         font-size: 3.75rem;
 
@@ -14,7 +14,7 @@
         font-size: 1.2rem;
 
     }
-}
+} */
 @media(max-width:991px){
     .header-scrolled{
         height: auto;
